--- a/Bachelor_Net60/Views/CategoryEditView.xaml
+++ b/Bachelor_Net60/Views/CategoryEditView.xaml
@@ -1,11 +1,12 @@
 ﻿<UserControl x:Class="Bachelor_Net60.Views.CategoryEditView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" mc:Ignorable="d" 
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Bachelor_Net60.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             xmlns:vm="clr-namespace:Bachelor_Net60.ViewModels"  
+             d:DataContext="{d:DesignInstance {x:Type vm:CategoryEditViewModel}, IsDesignTimeCreatable=True}"             
+             d:DesignHeight="200" d:DesignWidth="200">
     <Grid MinWidth="200" HorizontalAlignment="Left">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -14,17 +15,21 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBlock Text="Новая категория" Margin="5"/>
-            <TextBox Text="Имя категории" Margin="5" Width="100"/>
+            <TextBox Text="{Binding Category}"
+                     Margin="5" Width="100"/>
         </StackPanel>
-        <!--<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <TextBlock Text="Предок" Margin="5"/>
-            <TextBox Text="Выбранний продукт"
-                     Margin="5" Width="100"
-                     Focusable="False"/>
-        </StackPanel>-->
-        <Button Grid.Row="2"
-                HorizontalAlignment="Center"
-                Margin="5"
-                Content="Сохранить"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Grid.Row="2"
+                    HorizontalAlignment="Center"
+                    Margin="5"
+                    Content="Сохранить"/>
+            <Button Grid.Row="3"
+                    HorizontalAlignment="Center"
+                    Margin="5"
+                    IsCancel="True"
+                    Content="Отмена"
+                    Command="{Binding CancelEditCommand}">
+            </Button>
+        </StackPanel>        
     </Grid>
 </UserControl>
