Дерево превратилось в список. Начало работы над таблицей с ценами

--- a/Bachelor_Net60/Views/Windows/ProductsManagementWindow.xaml
+++ b/Bachelor_Net60/Views/Windows/ProductsManagementWindow.xaml
@@ -60,7 +60,8 @@
                                              Height="13" Margin="5"
                                              PrimaryColor="Blue"/>
                         </Button>
-                        <Button Margin="20 3 0 3">
+                        <Button Margin="20 3 0 3"
+                                Command="{Binding RemoveCategoryCommand}">
                             <fa:ImageAwesome Icon="Solid_Trash"
                                              Height="13" Margin="5"
                                              PrimaryColor="Red"/>
