--- a/Bachelor_Net60/Views/ProductDetailsView.xaml
+++ b/Bachelor_Net60/Views/ProductDetailsView.xaml
@@ -26,35 +26,17 @@
             <TextBlock Text="Название" Margin="5"/>
             <TextBox Text="{Binding Product.Name}" Margin="5" Width="100"/>
         </StackPanel>
-        <DataGrid Grid.Row="2" MinHeight="100" Margin="5">
+        <DataGrid Grid.Row="2" MinHeight="100" Margin="5"
+                  AutoGenerateColumns="False"
+                  GridLinesVisibility="Vertical"
+                  VerticalGridLinesBrush="DarkGray"
+                  AlternatingRowBackground="LightGray">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="От (шт.)" Binding="{Binding}" Width="Auto"/>
+                <DataGridTextColumn Header="Цена" Binding="{Binding}" Width="Auto"/>
+            </DataGrid.Columns>
 
-        </DataGrid>        
-        <!--<StackPanel Grid.Row="3"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top">
-            <Button Margin="5" Padding="5"
-                    IsDefault="True"
-                    CommandParameter="True"
-                    Command="{Binding AddProductViewCommand}">
-                <fa:ImageAwesome Icon="Solid_Plus"
-                                 Foreground="ForestGreen"
-                                 Height="13" Margin="5"/>
-            </Button>
-            <Button Margin="5" Padding="5"
-                    IsDefault="True"
-                    CommandParameter="False"
-                    Command="{Binding AddProductViewCommand}">
-                <fa:ImageAwesome Icon="Solid_Wrench"
-                                 Height="13" Margin="5"
-                                 Foreground="Blue"/>
-            </Button>
-            <Button Margin="5" Padding="5"
-                    IsDefault="True">
-                <fa:ImageAwesome Icon="Solid_Trash"
-                                 Height="13" Margin="5"
-                                 Foreground="Red"/>
-            </Button>-->
+        </DataGrid> 
             <UniformGrid Grid.Row="3"
                                  Rows="1"
                                  HorizontalAlignment="Stretch"
